2005-02-23  Naba Kumar  <naba@gnome.org>

	Patch from Massimo Cora' <maxcvs@email.it>:
	* plugins/Makefile.am,
	plugins/patch/Makefile.am,
	(added) plugins/patch/anjuta-patch-plugin.png,
	(added) plugins/patch/anjuta-patch.plugin.in,
	(added) plugins/patch/anjuta-patch.ui,
	plugins/patch/patch-plugin.c,
	(added) plugins/patch/patch-plugin.h,
	(added) plugins/patch/plugin.c,
	(added) plugins/patch/plugin.h: Ported patch plugin to Anjuta 2.0
	architecture.

2005-02-23  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-marshal.list, libanjuta/anjuta-plugin.[ch],
	file-loader/plugin.c, profile-default/plugin.c:
	Implemented "activated" and "deactivated" signals for plugin class.
	Renamed *_location() functions to *_id(), because location is
	ambiguous. Implemented anjuta_plugins_unload_plugin_by_id() and
	anjuta_plugins_unload_plugin().
	
	* class-gen/plugin.c: Fixed complier warning and utility function call.
	
	* debug-manager/plugin.c: Unload debugger plugin correctly.
	
	* project-manager/plugin.c:	Fixed compiler warnings.
	
	* plugins/project-wizard/templates/gnome/.cvsignore,
	plugins/project-wizard/templates/gnome/po/.cvsignore,
	plugins/project-wizard/templates/gnome/src/.cvsignore,
	plugins/project-wizard/templates/gtk/po/.cvsignore,
	plugins/project-wizard/templates/gtkmm/po/.cvsignore,
	plugins/project-wizard/templates/xlib/.cvsignore: Added cvsignores.
	
	* manuals/reference/libanjuta/tmpl/*: Unnecessary changes from the
	build (we need to fix this thing).
	
2005-02-23  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/macro/macro-action.[ch]
	plugins/macro/macro-edit.c
	plugins/macro/macro-dialog.c
	plugins/macro/macro-db.[ch]
	plugins/macro/plugin.[ch]
	plugins/macro/macro-util.[ch] (added)
	
	Cleaned up macro plugin and preview expanded macros.

2005-02-21  Ryan Garver <rgarvage@yahoo.com>

	* plugins/cvs-plugin/cvs-interface.c:

	Fixed option setting when using no compression and not 
	ignoring .cvsrc

2005-02-23  Naba Kumar  <naba@gnome.org>
	