@@ -178,18 +178,17 @@ static gboolean
 match_keyword (MacroPlugin * plugin, GtkTreeIter * iter, const gchar *keyword)
 {
 	gchar *name;
-	gchar *buffer;
 	
 	gtk_tree_model_get(macro_db_get_model(plugin->macro_db), iter,
 		MACRO_NAME, &name, -1);
 	if ( name && strcmp(keyword, name) == 0)
 	{
 		const int CURRENT_POS = -1;
-		gchar* text = macro_db_get_macro(plugin->macro_db, iter);
+		gchar* text = macro_db_get_macro(plugin, plugin->macro_db, iter);
 		if (plugin->current_editor != NULL && text != NULL)
 		{
 			ianjuta_editor_insert (IANJUTA_EDITOR (plugin->current_editor),
-					       CURRENT_POS, buffer, -1, NULL);
+					       CURRENT_POS, text, -1, NULL);
 			g_free(text);
 		}
 		return TRUE;
