@@ -22,13 +22,13 @@
 #include <libanjuta/anjuta-plugin.h>
 #include <libanjuta/interfaces/ianjuta-editor.h>
 
-#include "macro-db.h"
+//#include "macro-db.h"
 
 #define GLADE_FILE PACKAGE_DATA_DIR"/glade/anjuta-macro.glade"
 
 typedef struct _MacroPlugin MacroPlugin;
 typedef struct _MacroPluginClass MacroPluginClass;
-
+#include "macro-db.h"
 struct _MacroPlugin
 {
 	AnjutaPlugin parent;
